tests/baselines/reference/parserStrictMode6-negative.errors.txt
parserStrictMode6-negative.ts(1,1): error TS2630: Cannot assign to 'eval' because it is a function.


==== parserStrictMode6-negative.ts (1 errors) ====
    eval++;
    ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.